# docling

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release-please.yml
src/: app.py
src/docling_pkg.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
